Modificaciones hechas a raíz de la tercera ronda de pruebas.

--- a/saitae-web/src/main/webapp/resources/components/autentia/maestro1.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/maestro1.xhtml
@@ -12,6 +12,7 @@
         <cc:attribute name="especialidades" default="#{null}"/>
         <cc:attribute name="salarios" default="#{null}"/>
         <cc:attribute name="disable" default="#{false}" type="java.lang.Boolean"/>
+        <cc:attribute name="desabilitar" default="false" type="java.lang.Boolean"/>
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
@@ -19,7 +20,8 @@
         <h:panelGrid columns="3">
             <p:outputLabel for="esp" value="Especialidad: "/>
             <p:selectOneMenu id="esp" value="#{cc.attrs.maestro.maestroEspecialidad}" required="true" 
-                             converter="omnifaces.SelectItemsConverter" disabled="#{cc.attrs.disable}">
+                             converter="omnifaces.SelectItemsConverter" 
+                             disabled="#{cc.attrs.disable || cc.attrs.desabilitar}">
                 <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
                 <f:selectItems value="#{cc.attrs.especialidades==null? maestroController.tipoE : cc.attrs.especialidades}" var="e" 
                                itemLabel="#{e.tipoEspecialidadesNombre}" itemValue="#{e}"/>
@@ -28,15 +30,17 @@
             <p:message for="esp"/>
 
             <p:outputLabel for="escal" value="Tiene escalafón: "/>
-            <p:selectBooleanButton id="escal" value="#{cc.attrs.maestro.maestroSinEscalafon}" disabled="#{cc.attrs.disable}"
+            <p:selectBooleanButton id="escal" value="#{cc.attrs.maestro.maestroSinEscalafon}" 
+                                   disabled="#{cc.attrs.disable || cc.attrs.desabilitar}"
                                    onLabel="Sí" offLabel="No" style="width:60px" required="true">
                 <p:ajax event="change" listener="#{loginController.onBlour}"/>
             </p:selectBooleanButton>
             <p:message for="escal"/>
 
             <p:outputLabel for="turno" value="Turno"/>
-            <p:selectOneMenu id="turno" value="#{cc.attrs.maestro.maestroTurno}" required="true" style="width:100%"
-                             disabled="#{cc.attrs.disable}">
+            <p:selectOneMenu id="turno" value="#{cc.attrs.maestro.maestroTurno}" 
+                             required="true" style="width:100%"
+                             disabled="#{cc.attrs.disable || cc.attrs.desabilitar}">
                 <f:selectItem itemLabel="Todo el día" itemValue="T"/>
                 <f:selectItem itemLabel="Mañana" itemValue="M"/>
                 <f:selectItem itemLabel="Tarde" itemValue="V"/>
@@ -46,7 +50,8 @@
 
             <p:outputLabel for="sal" value="Tipo de sueldo: "/>
             <p:selectOneMenu id="sal" value="#{cc.attrs.maestro.maestroTipoSalario}" required="true" 
-                             converter="omnifaces.SelectItemsConverter" disabled="#{cc.attrs.disable}">
+                             converter="omnifaces.SelectItemsConverter" 
+                             disabled="#{cc.attrs.disable || cc.attrs.desabilitar}">
                 <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
                 <f:selectItems value="#{cc.attrs.salarios == null? maestroController.tipoS : cc.attrs.salarios}" var="s"
                                itemLabel="#{s.tipoSueldoNombre}" itemValue="#{s}"/>
@@ -56,34 +61,39 @@
 
             <p:outputLabel for="tec" value="Le ha sido útil la tecnología en la enseñanza? "/>
             <p:selectBooleanButton id="tec" value="#{cc.attrs.maestro.maestroUtilidadTecnologica}" 
-                                   onLabel="Sí" offLabel="No" style="width:60px" required="true">
+                                   onLabel="Sí" offLabel="No" style="width:60px" required="true"
+                                   disabled="#{cc.attrs.desabilitar}">
                 <p:ajax event="change" listener="#{loginController.onBlour}"/>
             </p:selectBooleanButton>
             <p:message for="tec"/>
 
             <p:outputLabel for="horas" value="Horas a la semana que usa tecnología en la enseñanza: "/>
-            <p:inputText id="horas" value="#{cc.attrs.maestro.maestroHorasUsoTecnologia}" required="true">
+            <p:inputText id="horas" value="#{cc.attrs.maestro.maestroHorasUsoTecnologia}" required="true"
+                         disabled="#{cc.attrs.desabilitar}">
                 <p:ajax event="change" listener="#{loginController.onBlour}"/>
             </p:inputText>
             <p:message for="horas"/>
 
             <p:outputLabel for="video" value="Ha usado videoconferencias? "/>
             <p:selectBooleanButton id="video" value="#{cc.attrs.maestro.maestroUsoVideoconferencias}" 
-                                   onLabel="Sí" offLabel="No" style="width:60px" required="true">
+                                   onLabel="Sí" offLabel="No" style="width:60px" required="true"
+                                   disabled="#{cc.attrs.desabilitar}">
                 <p:ajax event="change" listener="#{loginController.onBlour}"/>
             </p:selectBooleanButton>
             <p:message for="video"/>
 
             <p:outputLabel for="rec" value="Puede usar recursos web (Navegador, Internet, ...)?"/>
             <p:selectBooleanButton id="rec" value="#{cc.attrs.maestro.maestroRecursosWeb}" 
-                                   onLabel="Sí" offLabel="No" style="width:60px" required="true">
+                                   onLabel="Sí" offLabel="No" style="width:60px" required="true"
+                                   disabled="#{cc.attrs.desabilitar}">
                 <p:ajax event="change" listener="#{loginController.onBlour}"/>
             </p:selectBooleanButton>
             <p:message for="rec"/>
 
             <p:outputLabel for="capa" value="Tiene capacitaciones Virtuales? "/>
             <p:selectBooleanButton id="capa" value="#{cc.attrs.maestro.maestroCapacitacionesVirtuales}" 
-                                   onLabel="Sí" offLabel="No" style="width:60px" required="true">
+                                   onLabel="Sí" offLabel="No" style="width:60px" required="true"
+                                   disabled="#{cc.attrs.desabilitar}">
                 <p:ajax event="change" listener="#{loginController.onBlour}"/>
             </p:selectBooleanButton>
             <p:message for="capa"/>
