--- a/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
@@ -9,6 +9,7 @@
     <!-- INTERFACE -->
     <cc:interface>        
         <cc:attribute name="es" type="net.delsas.saitae.entities.Estudiante"/>
+        <cc:attribute name="desabilitar" default="false" type="java.lang.Boolean"/>
         <cc:attribute name="persona" required="true" type="net.delsas.saitae.entities.Persona"/>
         <cc:attribute name="departamentoLista" required="true"/>
         <cc:attribute name="dui" required="true"/>
@@ -26,7 +27,8 @@
             <p:outputLabel for="dui_#{cc.attrs.t}_x" value="DUI: "/>
             <p:autoComplete id="dui_#{cc.attrs.t}_x" value="#{cc.attrs.dui}" required="true"
                             title="Ingrese el número de documento de identificación de la persona."
-                            completeMethod="#{cc.attrs.onComplete}">
+                            completeMethod="#{cc.attrs.onComplete}"
+                            disabled="#{cc.attrs.desabilitar}">
                 <f:validateLength minimum="9"/>
                 <p:ajax event="itemSelect" listener="#{axiliarController.onItemSelect}" 
                         update="form0:msgs form1"/>
@@ -36,25 +38,28 @@
 
             <p:outputLabel for="nit_#{cc.attrs.t}_x" value="NIT: " />
             <p:inputMask id="nit_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaNit}" required="#{cc.attrs.t!=8}" 
-                         mask="9999-999999-999-9" title="Ingrese nu NIT" />
+                         mask="9999-999999-999-9" title="Ingrese nu NIT" disabled="#{cc.attrs.desabilitar}"/>
             <p:message for="nit_#{cc.attrs.t}_x" showSummary="true" />              
 
             <p:outputLabel for="nombre_#{cc.attrs.t}_x" value="Nombre: "/>
-            <p:inputText id="nombre_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaNombre}" required="true" title="Ingrese el nombre de la persona a agregar"/>
+            <p:inputText id="nombre_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaNombre}" required="true" title="Ingrese el nombre de la persona a agregar"
+                         disabled="#{cc.attrs.desabilitar}"/>
             <p:message for="nombre_#{cc.attrs.t}_x" showSummary="true" />
 
             <p:outputLabel for="apellido_#{cc.attrs.t}_x" value="Apellidos: "/>
-            <p:inputText id="apellido_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaApellido}" required="true" title="Apellidos de la persona"/>
+            <p:inputText id="apellido_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaApellido}" required="true" title="Apellidos de la persona"
+                         disabled="#{cc.attrs.desabilitar}"/>
             <p:message for="apellido_#{cc.attrs.t}_x" showSummary="true" /> 
 
             <p:outputLabel for="fecha_#{cc.attrs.t}_x" value="Fecha de nacimiento: " />
             <p:calendar id="fecha_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaNacimiento}" pattern="dd-MM-yyyy" mask="true" 
-                        title="Ingrese la fecha de nacimiento de la persona." />
+                        title="Ingrese la fecha de nacimiento de la persona." 
+                        disabled="#{cc.attrs.desabilitar}"/>
             <p:message for="fecha_#{cc.attrs.t}_x" showSummary="true" />
 
             <p:outputLabel for="sexo_#{cc.attrs.t}_x" value="Sexo: " />
             <p:selectOneMenu id="sexo_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaSexo}" style="width:125px" title="Seleccione su sexo"
-                             >
+                             disabled="#{cc.attrs.desabilitar}">
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                 <f:selectItem itemLabel="Femenino" itemValue="true" />
                 <f:selectItem itemLabel="Masculino" itemValue="false" />
@@ -63,7 +68,8 @@
 
             <p:outputLabel for="ef_#{cc.attrs.t}_x" value="Estado Familiar: " />
             <p:selectOneMenu id="ef_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaEstadoFamiliar}" style="width:125px" 
-                             title="Seleccione el estado familiar de la persona" >
+                             title="Seleccione el estado familiar de la persona" 
+                             disabled="#{cc.attrs.desabilitar}">
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                 <f:selectItem itemLabel="Solter@" itemValue="0" />
                 <f:selectItem itemLabel="Casad@" itemValue="1" />
@@ -73,7 +79,8 @@
 
             <p:outputLabel for="nacion_#{cc.attrs.t}_x" value="Nacionalidad: "/>
             <p:selectOneMenu id="nacion_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaNacionalidad}"  required="true"
-                             style="width:125px" label="Seleccione su nacionalidad" >
+                             style="width:125px" label="Seleccione su nacionalidad" 
+                             disabled="#{cc.attrs.desabilitar}">
                 <f:selectItem itemLabel="Seleccione" itemValue="9" />
                 <f:selectItem itemLabel="Salvadoreña" itemValue="Salvadoreña" />
                 <f:selectItem itemLabel="Extrangera" itemValue="Extrangera" />
@@ -83,7 +90,8 @@
 
             <h:outputLabel for="dep_#{cc.attrs.t}_x" value="Departamento de nacimiento: " />
             <p:selectOneMenu id="dep_#{cc.attrs.t}_x" value="#{cc.attrs.departamento}" required="true" style="width:125px" 
-                             title="Seleccione el departamento de nacimiento" >
+                             title="Seleccione el departamento de nacimiento" 
+                             disabled="#{cc.attrs.desabilitar}">
                 <f:selectItems value="#{cc.attrs.departamentoLista}"/>
                 <p:ajax update="mun_#{cc.attrs.t}_x"/>
             </p:selectOneMenu>
@@ -91,14 +99,16 @@
 
             <h:outputLabel for="mun_#{cc.attrs.t}_x" value="Municipio de nacimiento: " />
             <p:selectOneMenu id="mun_#{cc.attrs.t}_x" value="#{cc.attrs.municipio}" required="true" style="width:125px" 
-                             title="Seleccione el municipio de nacimiento" >
+                             title="Seleccione el municipio de nacimiento" 
+                             disabled="#{cc.attrs.desabilitar}">
                 <f:selectItems value="#{cc.attrs.municipioLista}"/>
             </p:selectOneMenu>
             <p:column />
 
             <p:outputLabel for="zona_#{cc.attrs.t}_x" value="Zona de residencia: " />
             <p:selectOneMenu id="zona_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaZonaVivienda}" required="true"
-                             style="width:125px" title="Seleccione su Zona donde vive" >
+                             style="width:125px" title="Seleccione su Zona donde vive" 
+                             disabled="#{cc.attrs.desabilitar}">
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                 <f:selectItem itemLabel="Rural" itemValue="0" />
                 <f:selectItem itemLabel="Urbana" itemValue="1" />
@@ -107,33 +117,35 @@
 
             <p:outputLabel for="cod_#{cc.attrs.t}_x" value="Código de residencia: " rendered="#{cc.attrs.t==4}"/>
             <p:inputText id="cod_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaCodigoResidencia}" 
-                         required="true" rendered="#{cc.attrs.t==4}"/>
+                         required="true" rendered="#{cc.attrs.t==4}"
+                         disabled="#{cc.attrs.desabilitar}"/>
             <p:message for="cod_#{cc.attrs.t}_x" showSummary="true" rendered="#{cc.attrs.t==4}"/>
 
             <p:outputLabel for="titulo_#{cc.attrs.t}_x" value="Profesión: " rendered="#{cc.attrs.t!=8}"/>
             <p:inputText id="titulo_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaOCupacion}" required="true" 
-                         rendered="#{cc.attrs.t!=8}"
+                         rendered="#{cc.attrs.t!=8}" disabled="#{cc.attrs.desabilitar}"
                          title="Ingrese la profesión de la persona."/>
             <p:message for="titulo_#{cc.attrs.t}_x" showSummary="true" rendered="#{cc.attrs.t!=8}"/>
 
             <p:outputLabel for="disca_#{cc.attrs.t}_x" value="Discapacidades: " />
             <p:inputText id="disca_#{cc.attrs.t}_x" value="#{cc.attrs.persona.personaDiscapacidades}" type="text"
                          title="Si tiene alguna discapacidad, escríbalas separadas por comas"
-                         />
+                         disabled="#{cc.attrs.desabilitar}"/>
             <p:column />
 
             <p:outputLabel for="enf_#{cc.attrs.t}_x" value="Enfermedades que padece: " 
                            rendered="#{cc.attrs.t == 8}"/>
             <p:inputText id="enf_#{cc.attrs.t}_x" value="#{cc.attrs.es.estudianteEnfermedades}" type="text"
                          title="Si padece enfermedades crónicas, escríbalas separadas por comas"
-                         rendered="#{cc.attrs.t == 8}"/>
+                         rendered="#{cc.attrs.t == 8}" disabled="#{cc.attrs.desabilitar}"/>
             <p:column rendered="#{cc.attrs.t == 8}"/>
 
             <p:outputLabel for="med_#{cc.attrs.t}_x" value="Medicamentos permanentes: " 
                            rendered="#{cc.attrs.t == 8}"/>
             <p:inputText id="med_#{cc.attrs.t}_x" value="#{cc.attrs.es.estudianteMedicamentos}" type="text"
                          title="Si tiene Medicamentos Recetados de forma permanente, escríbalos separadas por comas"
-                         rendered="#{cc.attrs.t == 8}"/>
+                         rendered="#{cc.attrs.t == 8}"
+                         disabled="#{cc.attrs.desabilitar}"/>
             <p:column rendered="#{cc.attrs.t == 8}"/>
         </h:panelGrid> 
     </cc:implementation>
