--- a/saitae-web/src/main/webapp/resources/components/autentia/consulta.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/consulta.xhtml
@@ -18,7 +18,8 @@
         <p:tabView>
             <p:tab title="Etapa inicial">
                 <h:panelGrid columns="2" cellspacing="2" style="height: available">
-                    <p:outputLabel value="Fecha de consulta:" for="Fechaconsulta" rendered="#{cc.attrs.vf}"/>
+                    <p:outputLabel value="Fecha de consulta:" for="Fechaconsulta" 
+                                   rendered="#{cc.attrs.vf}"/>
                     <p:outputLabel id="Fechaconsulta" rendered="#{cc.attrs.vf}"
                                    value="#{cc.attrs.selected.consultaPK.fechaHoraConsulta}" 
                                    title="Fecha de Consulta" >
@@ -26,14 +27,14 @@
                     </p:outputLabel>
 
                     <p:outputLabel value="Remitido Por:" for="consultaRemitidoPor" />
-                    <p:inputText id="consultaRemitidoPor" size="80" disabled="#{cc.attrs.desactivado}"
+                    <p:inputText id="consultaRemitidoPor" disabled="#{cc.attrs.desactivado}"
                                  value="#{cc.attrs.selected.consultaRemitidoPor}">
                         <f:validateLength maximum="45"/>
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
                     </p:inputText>
 
                     <p:outputLabel value="Motivo de consulta:" for="consultaMotivo" />
-                    <p:inputTextarea id="consultaMotivo" cols="80" rows="2" disabled="#{cc.attrs.desactivado}"
+                    <p:inputTextarea id="consultaMotivo" rows="2" disabled="#{cc.attrs.desactivado}"
                                      value="#{cc.attrs.selected.consultaMotivo}" required="true" 
                                      requiredMessage="Debe indicar el motivo de la consuta antes de guardar los datos."
                                      maxlength="80">
@@ -44,21 +45,21 @@
             <p:tab title="Antecedentes">
                 <h:panelGrid columns="2" cellspacing="2" style="height: available">
                     <p:outputLabel value="Antecedentes Personales:" for="consultaAntecedentePersonal" />
-                    <p:inputTextarea id="consultaAntecedentePersonal" cols="80" rows="2" disabled="#{cc.attrs.desactivado}"
+                    <p:inputTextarea id="consultaAntecedentePersonal" rows="2" disabled="#{cc.attrs.desactivado}"
                                      value="#{cc.attrs.selected.consultaAntecedentePersonal}"
                                      maxlength="140">
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
                     </p:inputTextarea>
 
                     <p:outputLabel value="Antecedentes Familiares:" for="consultaAntecedenteFamiliar" />
-                    <p:inputTextarea id="consultaAntecedenteFamiliar" cols="80" rows="2" disabled="#{cc.attrs.desactivado}"
+                    <p:inputTextarea id="consultaAntecedenteFamiliar" rows="2" disabled="#{cc.attrs.desactivado}"
                                      value="#{cc.attrs.selected.consultaAntecedenteFamiliar}"
                                      maxlength="140">
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
                     </p:inputTextarea>
 
                     <p:outputLabel value="Antecedentes Morbidos:" for="consultaAntecedentesMorbidos" />
-                    <p:inputTextarea id="consultaAntecedentesMorbidos" cols="80" rows="2" disabled="#{cc.attrs.desactivado}"
+                    <p:inputTextarea id="consultaAntecedentesMorbidos" rows="2" disabled="#{cc.attrs.desactivado}"
                                      value="#{cc.attrs.selected.consultaAntecedentesMorbidos}"
                                      maxlength="140">
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
@@ -68,21 +69,21 @@
             <p:tab title="Anáisis">
                 <h:panelGrid columns="2" cellspacing="2" style="height: available">
                     <p:outputLabel value="Conducta Observada:" for="consultaConductaObcerbada" />
-                    <p:inputTextarea id="consultaConductaObcerbada" cols="80" rows="2" disabled="#{cc.attrs.desactivado}"
+                    <p:inputTextarea id="consultaConductaObcerbada" rows="2" disabled="#{cc.attrs.desactivado}"
                                      value="#{cc.attrs.selected.consultaConductaObcerbada}"
                                      maxlength="140">
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
                     </p:inputTextarea>
 
                     <p:outputLabel value="Problema:" for="consultaProblema" />
-                    <p:inputTextarea id="consultaProblema" cols="80" rows="2" disabled="#{cc.attrs.desactivado}"
+                    <p:inputTextarea id="consultaProblema" rows="2" disabled="#{cc.attrs.desactivado}"
                                      value="#{cc.attrs.selected.consultaProblema}"
                                      maxlength="250">
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
                     </p:inputTextarea>
 
                     <p:outputLabel value="Diagnostico:" for="consultaDiagnostico" />
-                    <p:inputTextarea id="consultaDiagnostico" cols="80" rows="2" disabled="#{cc.attrs.desactivado}"
+                    <p:inputTextarea id="consultaDiagnostico" rows="2" disabled="#{cc.attrs.desactivado}"
                                      value="#{cc.attrs.selected.consultaDiagnostico}"
                                      maxlength="150">
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
@@ -92,21 +93,21 @@
             <p:tab title="Etapa de finalización">
                 <h:panelGrid columns="2" cellspacing="2" style="height: available">
                     <p:outputLabel value="Evaluacion Psicologica:" for="consultaEvaluacionPsicologica" />
-                    <p:inputTextarea id="consultaEvaluacionPsicologica" cols="80" rows="2" disabled="#{cc.attrs.desactivado}"
+                    <p:inputTextarea id="consultaEvaluacionPsicologica" rows="2" disabled="#{cc.attrs.desactivado}"
                                      value="#{cc.attrs.selected.consultaEvaluacionPsicologica}"
                                      maxlength="250">
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
                     </p:inputTextarea>
 
                     <p:outputLabel value="Remitir a:" for="consultaRemitir" />
-                    <p:inputTextarea id="consultaRemitir" cols="80" rows="2" disabled="#{cc.attrs.desactivado}"
+                    <p:inputTextarea id="consultaRemitir" rows="2" disabled="#{cc.attrs.desactivado}"
                                      value="#{cc.attrs.selected.consultaRemitir}"
                                      maxlength="80">
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
                     </p:inputTextarea>
 
                     <p:outputLabel value="Comentario adicional:" for="consultaCoemntario" />
-                    <p:inputText id="consultaCoemntario" size="80" disabled="#{cc.attrs.desactivado}"
+                    <p:inputText id="consultaCoemntario" disabled="#{cc.attrs.desactivado}"
                                  value="#{cc.attrs.selected.consultaCoemntario}">
                         <f:validateLength maximum="145"/>
                         <p:ajax event="change" listener="#{loginController.onBlour}"/>
